syntax = "proto3";

option go_package = "github.com/Asuha-a/ProgrammingCourseMarket/internal/pkg/pb/auth";

package auth;

service Auth {
  rpc Authn (AuthnRequest) returns (AuthnReply) {}
  rpc Authz (AuthzRequest) returns (AuthzReply) {}
}

message AuthnRequest {
  string email = 1;
  string password = 2;
}

message AuthnReply {
  string token = 1;
  string uuid = 2;
  string name = 3;
  string introduction = 4;
  string email = 5;
  string permission = 6;
}

message AuthzRequest {
  string token = 1;
}

message AuthzReply {
  string token = 1;
  string uuid = 2;
  string name = 3;
  string introduction = 4;
  string email = 5;
  string permission = 6;
}